--- a/Final-Project/assets/styles/hero-banner.css
+++ b/Final-Project/assets/styles/hero-banner.css
@@ -97,6 +97,9 @@
     flex-direction: column-reverse;
     padding: 60px 20px;
     text-align: center;
+    background-attachment: unset;
+    
+    
   }
 
   .hero-content h1 {
