--- a/Final-Project/assets/styles/navbar.css
+++ b/Final-Project/assets/styles/navbar.css
@@ -104,7 +104,11 @@ li.dropdown {
     justify-content: flex-end;
     z-index: 9999;
   }
-
+  .logo img {
+    margin-left: 0;
+    margin-right: auto;
+    display: block;
+  }
   .menu-btn {
     display: flex;
     z-index: 10000;
