--- a/Final-Project/assets/styles/thankyou.css
+++ b/Final-Project/assets/styles/thankyou.css
@@ -6,17 +6,31 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: #f9f9f9;
+  color: #333;
 }
 
 #thank-you h1 {
-  font-size: 32px;
-  margin-bottom: 24px;
+  font-size: 36px;
+  margin-bottom: 16px;
+ 
+}
+
+#thank-you p {
+  font-size: 18px;
+  max-width: 500px;
+  margin-bottom: 32px;
 }
 
 
 @media only screen and (max-width: 768px) {
   #thank-you h1 {
-    font-size: 24px;
+    font-size: 28px;
+  }
+
+  #thank-you p {
+    font-size: 16px;
+    padding: 0 10px;
   }
 
   #thank-you {
