--- a/Final-Project/assets/styles/footer.css
+++ b/Final-Project/assets/styles/footer.css
@@ -2,7 +2,7 @@
     background-color: rgb(32, 75, 32);
     color: #ffffff;
     padding: 40px 20px;
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
   }
   
   .footer-container {
